# fsspec-proxy

./: README.md  config.yaml  pyproject.toml  readthedocs.yml  run.sh
.github/workflows/: main.yaml
docs/: Makefile  README.md  environment.yml  make.bat
docs/source/: api.rst  conf.py  developer.rst  index.rst
example/: index.html  main.py  pyscript.toml  pyscript_fsspec_client  server.py  worker.py
fsspec-proxy/: pyproject.toml
fsspec-proxy/fsspec_proxy/: bytes_server.py  cors.py  file_manager.py
pyscript-client/: _version.py  pyproject.toml
pyscript-client/pyscript_client/: client.py
pyscript-fsspec-client/: pyproject.toml
pyscript-fsspec-client/pyscript_fsspec_client/: client.py  io.py
pyscript_demo/: bytes_server.py  client.py  file_manager.py
tests/: test_client.py
