[build-system]
requires = ["hatchling>=1.5.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyscript_demo"
authors = [
    {name = "martindurant"},
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    # "Framework :: PyScript",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fsspec>=2025.3.0",
    "fastapi"
]
dynamic = ["version", "description", "urls", "keywords"]

[tool.hatch.build.hooks.version]
path = "pyscript_demo/_version.py"

[tool.hatch.version]
source = "vcs"
path = "pyscript_demo/__init__.py"

[tool.check-wheel-contents]
ignore = ["W002"]
